test/visibility/import/rename/noSuchOldName.good
noSuchOldName.chpl:5: error: Bad identifier in rename, no known 'baz' in 'M'
